--- a/webapp/pom.xml
+++ b/webapp/pom.xml
@@ -1,8 +1,11 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
+                             http://maven.apache.org/maven-v4_0_0.xsd">
 
   <modelVersion>4.0.0</modelVersion>
 
+  <!-- Parent POM -->
   <parent>
     <groupId>com.example.maven-project</groupId>
     <artifactId>maven-project</artifactId>
@@ -12,16 +15,19 @@
 
   <artifactId>webapp</artifactId>
   <packaging>war</packaging>
+
   <name>Webapp</name>
-  <description>Webapp.</description>
+  <description>Web application module</description>
 
   <build>
     <finalName>${project.artifactId}</finalName>
 
     <plugins>
+      <!-- Jetty Plugin (version REQUIRED) -->
       <plugin>
         <groupId>org.mortbay.jetty</groupId>
         <artifactId>jetty-maven-plugin</artifactId>
+        <version>8.0.0.M1</version>
       </plugin>
     </plugins>
   </build>
@@ -39,6 +45,7 @@
       <artifactId>jsp-api</artifactId>
       <scope>provided</scope>
     </dependency>
+
   </dependencies>
 
 </project>
