--- a/webapp/pom.xml
+++ b/webapp/pom.xml
@@ -5,7 +5,7 @@
 
     <modelVersion>4.0.0</modelVersion>
 
-    <!-- Parent POM -->
+    <!-- Inherit from parent -->
     <parent>
         <groupId>com.example.maven-project</groupId>
         <artifactId>maven-project</artifactId>
@@ -21,9 +21,7 @@
 
     <build>
         <finalName>${project.artifactId}</finalName>
-
         <plugins>
-            <!-- Jetty plugin -->
             <plugin>
                 <groupId>org.mortbay.jetty</groupId>
                 <artifactId>jetty-maven-plugin</artifactId>
@@ -34,16 +32,19 @@
 
     <dependencies>
 
-        <!-- Versions inherited from parent dependencyManagement -->
+        <!-- Servlet API -->
         <dependency>
             <groupId>javax.servlet</groupId>
             <artifactId>servlet-api</artifactId>
+            <version>2.5</version>
             <scope>provided</scope>
         </dependency>
 
+        <!-- JSP API -->
         <dependency>
             <groupId>javax.servlet.jsp</groupId>
             <artifactId>jsp-api</artifactId>
+            <version>2.2</version>
             <scope>provided</scope>
         </dependency>
 
