--- a/pom.xml
+++ b/pom.xml
@@ -32,26 +32,41 @@
     <!-- ===================== -->
     <!-- Dependency Management -->
     <!-- ===================== -->
-    <dependencyManagement>
-        <dependencies>
+<dependencyManagement>
+    <dependencies>
 
-            <!-- ✅ FIX: hamcrest-library VERSION DEFINED HERE -->
-            <dependency>
-                <groupId>org.hamcrest</groupId>
-                <artifactId>hamcrest-library</artifactId>
-                <version>1.2.1</version>
-                <scope>test</scope>
-            </dependency>
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>servlet-api</artifactId>
+            <version>2.5</version>
+            <scope>provided</scope>
+        </dependency>
 
-            <dependency>
-                <groupId>junit</groupId>
-                <artifactId>junit</artifactId>
-                <version>4.10</version>
-                <scope>test</scope>
-            </dependency>
+        <dependency>
+            <groupId>javax.servlet.jsp</groupId>
+            <artifactId>jsp-api</artifactId>
+            <version>2.2</version>
+            <scope>provided</scope>
+        </dependency>
 
-        </dependencies>
-    </dependencyManagement>
+        <!-- ✅ FIXED JUNIT -->
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.13.2</version>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.hamcrest</groupId>
+            <artifactId>hamcrest-core</artifactId>
+            <version>1.3</version>
+            <scope>test</scope>
+        </dependency>
+
+    </dependencies>
+</dependencyManagement>
+
 
     <!-- ===================== -->
     <!-- Build Plugins -->
