--- a/server/pom.xml
+++ b/server/pom.xml
@@ -18,13 +18,20 @@
 
     <dependencies>
 
-        <!-- ✅ VERSION INHERITED FROM PARENT -->
-        <dependency>
-            <groupId>org.hamcrest</groupId>
-            <artifactId>hamcrest-library</artifactId>
-            <scope>test</scope>
-        </dependency>
+    <!-- JUnit -->
+    <dependency>
+        <groupId>junit</groupId>
+        <artifactId>junit</artifactId>
+        <scope>test</scope>
+    </dependency>
 
-    </dependencies>
+    <!-- Hamcrest -->
+    <dependency>
+        <groupId>org.hamcrest</groupId>
+        <artifactId>hamcrest-core</artifactId>
+        <scope>test</scope>
+    </dependency>
+
+</dependencies>
 
 </project>
