--- a/pom.xml
+++ b/pom.xml
@@ -35,7 +35,6 @@
     <dependencyManagement>
         <dependencies>
 
-            <!-- Servlet API -->
             <dependency>
                 <groupId>javax.servlet</groupId>
                 <artifactId>servlet-api</artifactId>
@@ -43,7 +42,6 @@
                 <scope>provided</scope>
             </dependency>
 
-            <!-- JSP API -->
             <dependency>
                 <groupId>javax.servlet.jsp</groupId>
                 <artifactId>jsp-api</artifactId>
@@ -51,7 +49,6 @@
                 <scope>provided</scope>
             </dependency>
 
-            <!-- JUnit -->
             <dependency>
                 <groupId>junit</groupId>
                 <artifactId>junit</artifactId>
@@ -59,7 +56,6 @@
                 <scope>test</scope>
             </dependency>
 
-            <!-- Hamcrest -->
             <dependency>
                 <groupId>org.hamcrest</groupId>
                 <artifactId>hamcrest-core</artifactId>
@@ -71,32 +67,30 @@
     </dependencyManagement>
 
     <!-- ===================== -->
-    <!-- Plugin Management (CRITICAL FIX) -->
+    <!-- Build Plugins (EXECUTED) -->
     <!-- ===================== -->
     <build>
-        <pluginManagement>
-            <plugins>
+        <plugins>
 
-                <!-- Compiler Plugin (FORCES Java 8) -->
-                <plugin>
-                    <groupId>org.apache.maven.plugins</groupId>
-                    <artifactId>maven-compiler-plugin</artifactId>
-                    <version>3.11.0</version>
-                    <configuration>
-                        <source>8</source>
-                        <target>8</target>
-                    </configuration>
-                </plugin>
+            <!-- 🔴 THIS WAS MISSING -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.11.0</version>
+                <configuration>
+                    <source>8</source>
+                    <target>8</target>
+                </configuration>
+            </plugin>
 
-                <!-- SonarQube Plugin -->
-                <plugin>
-                    <groupId>org.sonarsource.scanner.maven</groupId>
-                    <artifactId>sonar-maven-plugin</artifactId>
-                    <version>3.11.0.3922</version>
-                </plugin>
+            <!-- SonarQube -->
+            <plugin>
+                <groupId>org.sonarsource.scanner.maven</groupId>
+                <artifactId>sonar-maven-plugin</artifactId>
+                <version>3.11.0.3922</version>
+            </plugin>
 
-            </plugins>
-        </pluginManagement>
+        </plugins>
     </build>
 
 </project>
