--- a/server/pom.xml
+++ b/server/pom.xml
@@ -15,22 +15,33 @@
     <artifactId>server</artifactId>
     <packaging>jar</packaging>
 
-    <dependencies>
+    <!-- 🔴 ADD THIS BUILD BLOCK -->
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.11.0</version>
+                <configuration>
+                    <source>8</source>
+                    <target>8</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 
-        <!-- JUnit -->
+    <dependencies>
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <scope>test</scope>
         </dependency>
 
-        <!-- Hamcrest -->
         <dependency>
             <groupId>org.hamcrest</groupId>
             <artifactId>hamcrest-core</artifactId>
             <scope>test</scope>
         </dependency>
-
     </dependencies>
 
 </project>
