--- a/pom.xml
+++ b/pom.xml
@@ -10,28 +10,16 @@
     <version>1.0-SNAPSHOT</version>
     <packaging>pom</packaging>
 
-    <name>Maven Project</name>
-
-    <!-- ===================== -->
-    <!-- Properties -->
-    <!-- ===================== -->
     <properties>
+        <maven.compiler.release>8</maven.compiler.release>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <maven.compiler.source>8</maven.compiler.source>
-        <maven.compiler.target>8</maven.compiler.target>
     </properties>
 
-    <!-- ===================== -->
-    <!-- Modules -->
-    <!-- ===================== -->
     <modules>
         <module>server</module>
         <module>webapp</module>
     </modules>
 
-    <!-- ===================== -->
-    <!-- Dependency Management -->
-    <!-- ===================== -->
     <dependencyManagement>
         <dependencies>
 
@@ -66,31 +54,20 @@
         </dependencies>
     </dependencyManagement>
 
-    <!-- ===================== -->
-    <!-- Build Plugins (EXECUTED) -->
-    <!-- ===================== -->
+    <!-- 🔥 THIS IS THE IMPORTANT PART -->
     <build>
-        <plugins>
-
-            <!-- 🔴 THIS WAS MISSING -->
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.11.0</version>
-                <configuration>
-                    <source>8</source>
-                    <target>8</target>
-                </configuration>
-            </plugin>
-
-            <!-- SonarQube -->
-            <plugin>
-                <groupId>org.sonarsource.scanner.maven</groupId>
-                <artifactId>sonar-maven-plugin</artifactId>
-                <version>3.11.0.3922</version>
-            </plugin>
-
-        </plugins>
+        <pluginManagement>
+            <plugins>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-compiler-plugin</artifactId>
+                    <version>3.11.0</version>
+                    <configuration>
+                        <release>8</release>
+                    </configuration>
+                </plugin>
+            </plugins>
+        </pluginManagement>
     </build>
 
 </project>
