--- a/pom.xml
+++ b/pom.xml
@@ -63,11 +63,13 @@
                     <artifactId>maven-compiler-plugin</artifactId>
                     <version>3.11.0</version>
                     <configuration>
-                        <release>8</release>
+                        <source>8</source>
+                        <target>8</target>
                     </configuration>
-                </plugin>
+               </plugin>
             </plugins>
         </pluginManagement>
-    </build>
+   </build>
+
 
 </project>
