--- a/server/pom.xml
+++ b/server/pom.xml
@@ -15,7 +15,7 @@
     <artifactId>server</artifactId>
     <packaging>jar</packaging>
 
-    <!-- 🔥 THIS LINE ACTIVATES pluginManagement -->
+    <!-- 🔴 THIS BLOCK WAS MISSING -->
     <build>
         <plugins>
             <plugin>
