--- a/pom.xml
+++ b/pom.xml
@@ -55,32 +55,24 @@
     </dependencyManagement>
 
     <!-- 🔥 THIS IS THE IMPORTANT PART -->
-    <build>
-
-    <!-- Force modern compiler -->
+   <build>
     <pluginManagement>
         <plugins>
+
+            <!-- FORCE compiler plugin version -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.11.0</version>
+                <configuration>
+                    <release>8</release>
+                </configuration>
             </plugin>
+
         </plugins>
     </pluginManagement>
-
-    <!-- Execute compiler -->
-    <plugins>
-        <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-compiler-plugin</artifactId>
-            <configuration>
-                <!-- THIS is the key for Java 21 -->
-                <release>8</release>
-            </configuration>
-        </plugin>
-    </plugins>
-
 </build>
+
 
 
 
