--- a/server/pom.xml
+++ b/server/pom.xml
@@ -15,6 +15,16 @@
     <artifactId>server</artifactId>
     <packaging>jar</packaging>
 
+    <build>
+        <plugins>
+            <!-- THIS ACTIVATES THE COMPILER -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+            </plugin>
+        </plugins>
+    </build>
+
     <dependencies>
         <dependency>
             <groupId>junit</groupId>
