--- a/server/pom.xml
+++ b/server/pom.xml
@@ -9,14 +9,13 @@
         <groupId>com.example.maven-project</groupId>
         <artifactId>maven-project</artifactId>
         <version>1.0-SNAPSHOT</version>
-        <relativePath>../pom.xml</relativePath>
     </parent>
 
     <artifactId>server</artifactId>
     <packaging>jar</packaging>
 
-
     <dependencies>
+        <!-- JUnit -->
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
@@ -24,10 +23,11 @@
             <scope>test</scope>
         </dependency>
 
+        <!-- Hamcrest (FIXES Matchers ERROR) -->
         <dependency>
             <groupId>org.hamcrest</groupId>
-            <artifactId>hamcrest-core</artifactId>
-            <version>1.3</version>
+            <artifactId>hamcrest</artifactId>
+            <version>2.2</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
