--- a/server/pom.xml
+++ b/server/pom.xml
@@ -15,7 +15,8 @@
     <packaging>jar</packaging>
 
     <dependencies>
-        <!-- JUnit -->
+
+        <!-- ✅ JUnit -->
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
@@ -23,13 +24,14 @@
             <scope>test</scope>
         </dependency>
 
-        <!-- Hamcrest (FIXES Matchers ERROR) -->
+        <!-- ✅ Hamcrest (FIXES Matchers ERROR) -->
         <dependency>
             <groupId>org.hamcrest</groupId>
             <artifactId>hamcrest</artifactId>
             <version>2.2</version>
             <scope>test</scope>
         </dependency>
+
     </dependencies>
 
 </project>
