--- a/pom.xml
+++ b/pom.xml
@@ -1,7 +1,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
-                             http://maven.apache.org/maven-v4_0_0.xsd">
+                             http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
     <modelVersion>4.0.0</modelVersion>
 
@@ -10,16 +10,28 @@
     <version>1.0-SNAPSHOT</version>
     <packaging>pom</packaging>
 
+    <!-- ===================== -->
+    <!-- GLOBAL PROPERTIES -->
+    <!-- ===================== -->
     <properties>
         <maven.compiler.release>8</maven.compiler.release>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+
+        <!-- SonarQube -->
+        <sonar.host.url>http://13.50.225.135:9000</sonar.host.url>
     </properties>
 
+    <!-- ===================== -->
+    <!-- MODULES -->
+    <!-- ===================== -->
     <modules>
         <module>server</module>
         <module>webapp</module>
     </modules>
 
+    <!-- ===================== -->
+    <!-- DEPENDENCY MANAGEMENT -->
+    <!-- ===================== -->
     <dependencyManagement>
         <dependencies>
 
@@ -54,25 +66,32 @@
         </dependencies>
     </dependencyManagement>
 
-    <!-- 🔥 THIS IS THE IMPORTANT PART -->
-  <build>
-    <pluginManagement>
-        <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.11.0</version>
-                <configuration>
-                    <release>8</release>
-                </configuration>
-            </plugin>
-         </plugins>
-    </pluginManagement>
-  </build>
+    <!-- ===================== -->
+    <!-- PLUGIN MANAGEMENT -->
+    <!-- ===================== -->
+    <build>
+        <pluginManagement>
+            <plugins>
 
+                <!-- Compiler Plugin -->
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-compiler-plugin</artifactId>
+                    <version>3.11.0</version>
+                    <configuration>
+                        <release>8</release>
+                    </configuration>
+                </plugin>
 
+                <!-- 🔥 SONAR MAVEN PLUGIN (FIX) -->
+                <plugin>
+                    <groupId>org.sonarsource.scanner.maven</groupId>
+                    <artifactId>sonar-maven-plugin</artifactId>
+                    <version>3.11.0.3922</version>
+                </plugin>
 
-
-
+            </plugins>
+        </pluginManagement>
+    </build>
 
 </project>
